name:           Markov
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
synopsis:       A simple Markov Chain text generator.
description:    A simple Markov Chain text generator.
author:         Daniel W. Dyer
copyright:      (C) 2013 Daniel W. Dyer
homepage:       http://dandyer.co.uk

source-repository head
    type:       git
    location:   git://github.com/dwdyer/markov.git

executable markov
    main-is:            Main.hs
    other-modules:      Parody,
                        Markov
    build-depends:      base, containers, random
    default-language:   Haskell2010
    hs-source-dirs:     src
    ghc-options:        -Wall -O2

